# ubuntu-guard

./: .env.example  Cargo.toml  README.md
.github/workflows/: build.yml
src/: guard.rs  main.rs  parse_logs.rs  reader.rs  test_path.rs  test_regex.rs
